--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -9,7 +9,7 @@
         </div>
     </header>
     <div class="row text-center">
-        <div class="col-lg-12 title" >
+        <div class="col-lg-12">
             <h3>Our Most Popular Campgrounds</h3>
         </div>
     <% campgrounds.forEach(function (campground){ %>
