--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,6 @@
 body {
     background-color: #e9e9e9;
+    color: #084566;
 }
 
 .navbar-custom {
@@ -109,4 +110,23 @@ h3 {
     background-position: center;
     /* background-color: #cdcdcd; */
     color: #fff;
+}
+
+/* .comment {
+    margin-top: 0;
+    background-color: #e9e9e9;
+} */
+
+#comment-text {
+    padding-top: 1rem;
+    margin-bottom: .6rem;
+}
+
+.edit-image {
+    width: 100%;
+}
+
+h3 {
+    font-weight: bold;
+    line-height: 4em;
 }
