--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,22 +5,27 @@
         <div class="form-div">
             <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
                 <div class="form-group">
+                    Name:
                     <input type="text" class="form-control" name="campground[name]" value="<%= campground.name %>">
                 </div>
                 <div class="form-group">
+                    Price (USD):
                     <input type="number" class="form-control" name="campground[price]" value="<%= campground.price %>" min="0.01" step="0.01">
                 </div>
                 <div class="form-group">
+                    Image URL:
                     <input type="text" class="form-control" name="campground[image]" value="<%= campground.image %>">
+                    <img class="edit-image thumbnail" src="<%= campground.image %>">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" name="campground[description]" value="<%= campground.description %>">
+                    Description:
+                    <textarea class="form-control" name="campground[description]"><%= campground.description %></textarea>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                    <button class="btn btn-lg btn-custom btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go Back</a>
+            <a href="/campgrounds/<%= campground._id %>">Go Back</a>
         </div>
     </div>
     
