--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -14,10 +14,10 @@
                     <input type="text" class="form-control" name="image" placeholder="image url">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" name="description" placeholder="description">
+                    <textarea class="form-control" name="description">description</textarea>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                    <button class="btn btn-lg btn-custom btn-block">Submit!</button>
                 </div>
             </form>
             <a href="/campgrounds">Go Back</a>
