--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -24,11 +24,10 @@
                             <%= campground.description %>
                         </p>
                         <p>
-                            <em>Submitted By
-                                <strong>
+                            Submitted By
+                                <a href="#">
                                     <%= campground.author.username %>
-                                </strong>
-                            </em>
+                                </a>
                         </p>
                         <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
                             <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
@@ -44,13 +43,13 @@
                     </div>
                     <hr>
                     <% campground.comments.forEach(function(comment){ %>
-                        <div class="row">
+                        <div class="row comment">
                             <div class="col-md-12">
-                                <strong>
+                                <a href="#">
                                     <%= comment.author.username %>
-                                </strong>
+                                </a>
                                 <span class="pull-right">10 days ago</span>
-                                <p>
+                                <p id="comment-text">
                                     <%= comment.text %>
                                 </p>
                             <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
@@ -63,6 +62,7 @@
                             <% } %>
                             </div>
                         </div>
+                        <hr>
                         <% }) %>
                 </div>
             </div>
