--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -5,10 +5,10 @@
         <div class="form-div">
             <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="comment[text]" value="<%= comment.text %>">
+                        <textarea class="form-control" name="comment[text]"><%= comment.text %></textarea>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                    <button class="btn btn-lg btn-custom btn-block">Submit!</button>
                 </div>
             </form>
             <a href="/campgrounds/<%= campground_id %>">Go Back</a>
