--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -5,10 +5,10 @@
         <div class="form-div">
             <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="comment[text]" placeholder="text">
+                    <textarea class="form-control" name="comment[text]"></textarea>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                    <button class="btn btn-lg btn-custom btn-block">Submit!</button>
                 </div>
             </form>
             <a href="../">Go Back</a>
