--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
                     <input class="form-control" type="password" name="password" placeholder="password">
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-block btn-primary">Login</button>
+                    <button class="btn btn-lg btn-block btn-custom">Login</button>
                 </div>
             </form>
             <a href="../">Go Back</a>
