--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -5,16 +5,16 @@
         <div class="form-div">
             <form action="/campgrounds" method="POST">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="name" placeholder="name">
+                    <input type="text" class="form-control" name="name" placeholder="Name">
                 </div>
                 <div class="form-group">
-                    <input type="number" class="form-control" name="price" placeholder="price" min="0.01" step="0.01">
+                    <input type="number" class="form-control" name="price" placeholder="Price (USD)" min="0.01" step="0.01">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" name="image" placeholder="image url">
+                    <input type="text" class="form-control" name="image" placeholder="Image URL">
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" name="description">description</textarea>
+                    <textarea class="form-control" name="description">Description</textarea>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-custom btn-block">Submit!</button>
