--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -61,6 +61,11 @@ h3 {
     text-decoration: none;
 }
 
+#index-grid {
+    display:flex; 
+    flex-wrap: wrap;
+}
+
 .thumbnail img {
     width: 100%;
     border-radius: .5rem .5rem 0 0;
