--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,12 +1,16 @@
 body {
     background-color: #e9e9e9;
     color: #084566;
+    padding-top: 10vh;
 }
 
 .navbar-custom {
     background-color: #0d5c86;
 }
 
+.navbar i {
+    color: #fff;
+}
 .navbar-brand {
     color: #fff;
 }
@@ -133,5 +137,6 @@ h3 {
 
 h3 {
     font-weight: bold;
-    line-height: 4em;
+    margin-bottom: 30px;
+    line-height: 30px;
 }
