--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -105,7 +105,13 @@ h3 {
 }
 
 .form-div {
-    width: 30%; margin: 25px auto;
+    max-width: 30%;
+    min-width: 400px; 
+    margin: 25px auto;
+}
+
+textarea {
+    min-height: 100px;
 }
 
 .well {
