--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -13,10 +13,10 @@
             <h3>Our Most Popular Campgrounds</h3>
         </div>
     <% campgrounds.forEach(function (campground){ %>
-        <div class="col-lg-3 col-md-4 col-sm-6"">
+        <div id="camp-center" class="col-lg-3 col-md-4 col-sm-6" style="flex-wrap: wrap;">
             <a class="clickable" href="/campgrounds/<%= campground._id %>">    
             <div class="thumbnail" id="thumbnail-main">
-                    <img src="<%= campground.image %>">
+                    <img id="camp-img" src="<%= campground.image %>">
                     <div class="caption">
                         <h4><%= campground.name %></h4>   
                     </div>
@@ -27,6 +27,7 @@
         </div>
     <% }); %>
     </div>
+</div>
 </div>
 
 <% include ../partials/footer %>
