--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -44,6 +44,10 @@ h3 {
     line-height: 2em;
 }
 
+.btn-xs {
+    height: 20px;
+}
+
 .btn-custom {
     background-color: #488aad;
     color: #fff;
@@ -148,9 +152,10 @@ textarea {
     background-color: #e9e9e9;
 } */
 
-#comment-text {
-    padding-top: 1rem;
-    margin-bottom: .6rem;
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(72, 138, 173, 0.25), rgba(72, 138, 173, 0.3), rgba(72, 138, 173, 0.15), rgba(0, 0, 0, 0));
 }
 
 .edit-image {
