--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -23,26 +23,28 @@
                         <p>
                             <%= campground.description %>
                         </p>
+                        <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+                            <div class="pull-right">
+                                <a class="btn btn-sm btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                                <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                                    <button class="btn btn-sm btn-danger">Delete</button>
+                                </form>
+                            </div>
+                        <% } %>
                         <p>
                             Submitted By
                                 <a href="#">
                                     <%= campground.author.username %>
                                 </a>
                         </p>
-                        <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
-                            <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                            <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                                <button class="btn btn-danger">Delete</button>
-                            </form>
-                        <% } %>
                     </div>
                 </div>
                 <div class="well">
                     <div class="text-right">
-                        <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
+                        <a class="btn btn-sm btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
                     </div>
+                    <hr>
                     <% campground.comments.forEach(function(comment){ %>
-                        <hr>
                         <div class="row comment">
                             <div class="col-md-12">
                                 <a href="#">
@@ -53,12 +55,14 @@
                                     <%= comment.text %>
                                 </p>
                             <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
-                                <a class="btn btn-xs btn-warning" href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit">
+                                <span class="pull-right">
+                                <a class="btn btn-xs btn-info" href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit">
                                     Edit
                                 </a>
                                 <form class="delete-form" action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
                                     <input type="submit" class="btn btn-xs btn-danger" value="Delete"> 
                                 </form>
+                                </span>
                             <% } %>
                             </div>
                         </div>
