--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -93,6 +93,12 @@ h3 {
     width: 300px;
 }
 
+#show-img {
+    border-radius: .5rem .5rem 0 0;
+    width: 100%;
+    max-height: 500px;
+}
+
 .thumbnail {
     padding: 0;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
