--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -12,7 +12,7 @@
             </div>
             <div class="col-md-9">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="<%= campground.image %>">
+                    <img id="show-img" class="img-responsive" src="<%= campground.image %>">
                     <div class="caption-full">
                         <h4 class="pull-right">$<%= campground.price %>/night</h4>
                         <h4>
@@ -50,7 +50,7 @@
                                 <a href="#">
                                     <%= comment.author.username %>
                                 </a>
-                                <span class="pull-right">10 days ago</span>
+                                <span class="pull-right"><%= comment.date.toDateString() %></span>
                                 <p id="comment-text">
                                     <%= comment.text %>
                                 </p>
