Improve page redirects

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -25,7 +25,7 @@
                     <button class="btn btn-lg btn-custom btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/campgrounds/<%= campground._id %>">Go Back</a>
+            <a href="javascript:history.back()">Go Back</a>
         </div>
     </div>
     
