--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -11,7 +11,7 @@
                     <button class="btn btn-lg btn-custom btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/campgrounds/<%= campground_id %>">Go Back</a>
+            <a href="javascript:history.back()">Go Back</a>
         </div>
     </div>
     
