--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
                     <button class="btn btn-lg btn-block btn-custom">Sign Up</button>
                 </div>
             </form>
-            <a href="../">Go Back</a>
+            <a href="javascript:history.back()">Go Back</a>
         </div>
     </div>
     
