--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
                         <span class="sr-only">Toggle navigation</span>
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </button>
-                    <a class="navbar-brand" href="/">YelpCamp</a>
+                    <a class="navbar-brand" href="/"><i class="fa fa-fire" aria-hidden="true"></i> YelpCamp</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
