--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -172,3 +172,10 @@ h3 {
     margin-bottom: 30px;
     line-height: 30px;
 }
+
+footer {
+    text-align: center;
+    padding: 10px;
+    font-size: .9em;
+    font-weight: 200;
+  }
