fix login redirect

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
                     <button class="btn btn-lg btn-block btn-custom">Login</button>
                 </div>
             </form>
-            <a href="javascript:history.back()">Go Back</a>
+            <a href="./campgrounds">Go Back</a>
         </div>
     </div>
     
