add animations to index

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -39,6 +39,14 @@ header {
     text-align: center;
 }
 
+h1 {
+    animation: moveInLeft 1s ease-out;
+}
+
+h1 + p {
+    animation: moveInRight 1s ease-out;
+}
+
 h3 {
     line-height: 2em;
 }
@@ -180,3 +188,36 @@ footer {
     font-size: .9em;
     font-weight: 200;
   }
+
+
+  @keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-10rem);
+    }
+
+    80% {
+        transform: translateX(1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(10rem);
+    }
+
+    80% {
+        transform: translateX(-1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
