--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -236,11 +236,11 @@ footer {
     }
 }
 
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 300px) {
     #thumbnail {
         width: 300px;
     }
     #thumbnail-main {
-        margin: auto;
+        margin: 10px auto;
     }
 }
