add viewport metadata

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,8 @@
         <script src="https://code.jquery.com/jquery-3.3.0.min.js" integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" href="/stylesheets/main.css"
+        <link rel="stylesheet" href="/stylesheets/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav class="navbar navbar-fixed-top navbar-custom">
