--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
                         <span class="sr-only">Toggle navigation</span>
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </button>
-                    <a class="navbar-brand" href="/"><i class="fa fa-fire" aria-hidden="true"></i> YelpCamp</a>
+                    <a class="navbar-brand" href="/">YelpCamp</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
@@ -27,14 +27,13 @@
                             <li><a href="/login">Login</a></li>
                             <li><a href="/register">Sign Up</a></li>
                         <% } else { %>
-                            <li><a>Signed In As <%= currentUser.username %></a></li>
+                            <li><a><em>Signed In As <%= currentUser.username %></em></a></li>
                             <li><a href="/logout">Logout</a></li>
                         <% } %>
                     </ul>
                 </div>
             </div>
         </nav>
-
         <div class="container">
             <% if(error && error.length > 0){ %>
                 <div class="alert alert-danger">
