--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,246 +1,190 @@
+html {
+  min-height: 100vh; }
+
 body {
-    background-color: #e9e9e9;
-    color: #084566;
-    padding-top: 14vh;
-}
+  background-color: #f7fccf;
+  color: #000;
+  padding-top: 14vh; }
 
 .navbar-custom {
-    background-color: #0d5c86;
-}
+  background-color: #3c9e3c; }
 
 .navbar i {
-    color: #fff;
-}
-
-.navbar  i:hover {
-    color: #cdcdcd;
-}
+  color: #fff; }
 
 .navbar-brand {
-    color: #fff;
-}
+  color: #fff; }
 
 .navbar-brand:hover {
-    color: #cdcdcd;
-}
+  color: #cdcdcd; }
 
 .nav a {
-    color: #fff;
-}
-.nav a:hover {
-    color: #cdcdcd;
-}
+  color: #fff; }
 
-.nav>li>a:hover {
-    background-color: #0d5c86;
-}
+.nav a:hover {
+  color: #cdcdcd; }
+
+.nav > li > a:hover {
+  background-color: #7ad357;
+  color: #000; }
 
 header {
-    text-align: center;
-}
+  text-align: center; }
 
 #index-heading {
-    animation: moveInLeft 1s ease-out;
-}
+  animation: moveInLeft 1s ease-out; }
 
 #index-heading + p {
-    animation: moveInRight 1s ease-out;
-}
+  animation: moveInRight 1s ease-out; }
 
 h3 {
-    line-height: 2em;
-}
+  line-height: 2em; }
 
 .btn-xs {
-    height: 20px;
-}
+  height: 20px; }
 
 .btn-custom {
-    background-color: #488aad;
-    color: #fff;
-}
+  background-color: #db4465;
+  color: #fff; }
 
 .btn-custom:hover {
-    background-color: #3d7da0;
-    color: #fff;
-
-}
-
+  background-color: #9b1e39;
+  color: #fff; }
 
 .btn {
-    box-shadow: 0 .25rem .5rem rgba(0, 0, 0, .2);
-    transition: .2s;
-}
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
+  transition: .2s; }
 
 .btn:hover {
-    transform: translateY(1px);
-    box-shadow: 0 .12rem .25rem rgba(0, 0, 0, .2);
-}
+  transform: translateY(1px);
+  box-shadow: 0 0.12rem 0.25rem rgba(0, 0, 0, 0.2); }
 
 .title {
-    height: 10rem;
-}
+  height: 10rem; }
 
 .clickable:hover {
-    text-decoration: none;
-}
+  text-decoration: none; }
 
 #camp-center {
-    margin: auto 0;
-    opacity: 0;
-    animation: becomeVisible .25s ease-in .5s;
-    animation-fill-mode: forwards;
-}
+  margin: auto 0;
+  opacity: 0;
+  animation: becomeVisible .25s ease-in .5s;
+  animation-fill-mode: forwards; }
 
 #index-grid {
-    display:flex; 
-    flex-wrap: wrap;
-}
+  display: flex;
+  flex-wrap: wrap; }
 
 #camp-img {
-    border-radius: .5rem .5rem 0 0;
-    height: 65%;
-    width: 100%;
-}
+  border-radius: .5rem .5rem 0 0;
+  height: 65%;
+  width: 100%; }
 
 #show-img {
-    border-radius: .5rem .5rem 0 0;
-    width: 100%;
-    max-height: 500px;
-}
+  border-radius: .5rem .5rem 0 0;
+  width: 100%;
+  max-height: 500px; }
 
 .thumbnail {
-    padding: 0;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-    border-radius: .5rem;
-}
+  padding: 0;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  border-radius: .5rem; }
 
-#thumbnail-main{
-    box-shadow: 0 .3rem .6rem rgba(0, 0, 0, .2);
-    transition: .2s;
-    background-color: #e9e7e7;
-    height: 300px;
-    margin: 0 5% 5% 5%;
-    max-width: 350px;
-}
+#thumbnail-main {
+  box-shadow: 0 0.3rem 0.6rem rgba(0, 0, 0, 0.2);
+  transition: .2s;
+  background-color: #f7fccf;
+  height: 300px;
+  margin: 0 5% 5% 5%;
+  max-width: 350px; }
 
 #thumbnail-main:hover {
-    box-shadow: 0 .12rem .3rem rgba(0, 0, 0, .2);
-    transform: translateY(3px);
-}
+  box-shadow: 0 0.12rem 0.3rem rgba(0, 0, 0, 0.2);
+  transform: translateY(3px); }
 
-.thumbnail .caption-full {
-    padding: 9px;
-}
+.caption-full {
+  padding: 20px; }
 
 .delete-form {
-    display: inline;
-}
+  display: inline; }
 
 .form-header {
-    text-align: center;
-}
+  text-align: center; }
 
 .form-div {
-    max-width: 30%;
-    min-width: 400px; 
-    margin: 25px auto;
-}
+  max-width: 30%;
+  min-width: 400px;
+  margin: 25px auto; }
+
+.form-container {
+  min-height: 75vh; }
 
 textarea {
-    min-height: 100px;
-}
+  min-height: 100px; }
 
 .well {
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-}
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .jumbotron {
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-    background-image: url("https://i2.wp.com/crystalcourtcoven.com/wp-content/uploads/2017/06/cosmic-canyon-Mark-Basarab.jpg?fit=3000%2C1999");
-    background-size: cover;
-    background-position: center;
-    /* background-color: #cdcdcd; */
-    color: #fff;
-}
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(to right bottom, rgba(60, 158, 60, 0.2), rgba(32, 84, 32, 0.2)), url("assets/maria-chantal-rodriguez-nilsson-174086.jpg");
+  background-size: cover;
+  background-position: center;
+  /* background-color: #cdcdcd; */
+  color: #fff; }
 
 /* .comment {
     margin-top: 0;
     background-color: #e9e9e9;
 } */
-
 hr {
-    border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(72, 138, 173, 0.25), rgba(72, 138, 173, 0.3), rgba(72, 138, 173, 0.15), rgba(0, 0, 0, 0));
-}
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(72, 138, 173, 0.25), rgba(72, 138, 173, 0.3), rgba(72, 138, 173, 0.15), transparent); }
 
 .edit-image {
-    width: 100%;
-}
+  width: 100%; }
 
 h3 {
-    font-weight: bold;
-    margin-bottom: 30px;
-    line-height: 30px;
-}
+  font-weight: bold;
+  margin-bottom: 30px;
+  line-height: 30px; }
 
 footer {
-    text-align: center;
-    padding: 10px;
-    font-size: .9em;
-    font-weight: 200;
-  }
+  text-align: center;
+  padding: 10px;
+  font-size: .9em;
+  font-weight: 200; }
 
-
-  @keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-10rem);
-    }
-
-    80% {
-        transform: translateX(1rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
 
 @keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(10rem);
-    }
-
-    80% {
-        transform: translateX(-1rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
 
 @keyframes becomeVisible {
-    0% {
-        opacity: 0;
-        transform: translateY(3rem);
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1; } }
 
 @media only screen and (min-width: 300px) {
-    #thumbnail {
-        width: 300px;
-    }
-    #thumbnail-main {
-        margin: 10px auto;
-    }
-}
+  #thumbnail {
+    width: 300px; }
+  #thumbnail-main {
+    margin: 10px auto; } }
