--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-<div class="container">
+<div class="container form-container">
     <div class="row">
         <h1 class="form-header">Create a New Campground</h1>
         <div class="form-div">
