--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/header %>
-<div class="container">
+<div class="container form-container">
     <div class="row">
         <h1 class="form-header">Login</h1>
         <div class="form-div">
@@ -17,7 +17,6 @@
             <a href="javascript:history.back()">Go Back</a>
         </div>
     </div>
-    
 </div>
 
 <% include ./partials/footer %>
