--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<div class="container">
+<div class="container form-container">
     <div class="row">
         <h1 class="form-header">Sign Up</h1>
         <div class="form-div">
